--- a/Parte1/index.html
+++ b/Parte1/index.html
@@ -8,6 +8,21 @@
     <title>Tribute to : </title>
   </head>
   <body>
-
+    <h1>ALBERT EINSTEIN</h1>
+    <img src = "./img/AlbertEinstein_photo.jpg" width="25%"/>
+    <p id="quote">"Solo hay dos cosas infinitas, el universo y la estupidez humana, y no estoy muy seguro de la primera"</p>
+    <h3>TIMELINE</h3>
+    <main>
+      <div id="dates">
+        <p><span>14 de marzo de 1879</span>  Albert Einstein nació en Ulm, Alemania, en el seno de una familia judía. Sus padres eran Hermann Einstein y Pauline Koch.</p>
+        <p><span>1891</span>  Einstein era excelente en matemáticas y física pero no se interesaba por las otras materias, comenzó a estudiar matemáticas a la edad de 12 años.</p>
+        <p><span>1905</span>  Escribió cuatro artículos fundamentales sobre la física de pequeña y gran escala. En ellos explicaba el movimiento browniano, el efecto fotoeléctrico y desarrollaba la relatividad especial y la equivalencia masa-energía.</p>
+        <p><span>1916</span>  Presentó la Teoría General de la Relatividad, en la que reformuló por completo el concepto de gravedad. Una de las consecuencias fue el surgimiento del estudio científico del origen y evolución del universo por la rama de la física 
+          denominada cosmología. Muy poco después Einstein se convirtió en un icono popular de la ciencia alcanzando fama mundial, un privilegio al alcance de muy pocos científicos.</p>
+      </div>
+    </main>
+    <footer>
+      You can read more about Albert Einstein <a href="https://es.wikipedia.org/wiki/Albert_Einstein"> here</a>
+    </footer>
   </body>
 </html>
